<?xml version="1.0"?>
<package format="2">
  <name>vector_ros_driver</name>
  <version>0.0.3</version>
  <description>ROS python wrapper for Anki Vector SDK</description>
  <maintainer email="chaosbio@gmail.com">nilseuropa</maintainer>

  <license>UNLICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
